# deepresearch_teste

./: .gitignore  INSTRUCOES.md  README.md  test_depth_config.py
backend/: pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: mcp_service.py  openai_service.py  research_service.py  websearch_service.py
backend/tests/: test_healthz.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DeepResearchInterface.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
