[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
openai = "^1.98.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
mcp = "^1.12.2"
websockets = "^15.0.1"
asyncio-mqtt = "^0.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
